--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
     <br>
     <br>
     <label>triangle</label>
-    <button onclick="">go</button>
+    <a href ="triangle.html"></ahref><button>go</button></a>
     <br>
     <br>
     <label>trapezoid</label>
-    <button onclick="">go</button>
+    <a href = "trapezoid.html"><button>go</button></a>
+    <br>
+    <br>
+    <label>parallelogram</label>
+    <a href= "parallelogram.html"><button>go</button></a>
     <script src="sketch.js"></script>
   
 
