--- a/parallelogram.html
+++ b/parallelogram.html
@@ -8,7 +8,7 @@
 
   </head>
   <body>
-    <h1 style="text-align:center">Find the Area of the Triangle</h1>
+    <h1 style="text-align:center">Find the Area of the Parallelogram</h1>
     <h2 style="text-align:center">Type the Base and Height Into the Boxes to Find the Area!</h2>
     <label>Base:</label>
     <input id="sqLength">
@@ -30,7 +30,7 @@
      sqAreaButton.onclick = () => {
        let length = sqLengthBox.value
        let width = sqWidthBox.value
-       let area = (length*width)*(1/2)
+       let area = (length*width)
        sqArea.innerHTML = area
      }
      
